# keychase

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  MAINTAINER_GUIDE.md  README.MD  implementation_plan.md  project_review.md  pyproject.toml  task.md
.github/workflows/: ci.yml  release.yml
keychase/: cli.py  config.py
keychase/detectors/: __init__.py  ai_ml.py  aws.py  cloud_providers.py  databases.py  gcp.py  generic.py  github.py  messaging.py  payments.py
keychase/reporters/: console.py  json_reporter.py  sarif.py
keychase/scanner/: __init__.py  base.py  git_history_scanner.py  github_scanner.py  local_scanner.py
legacy/: app.py  test_code.py
tests/: test_cli.py  test_detectors.py  test_local_scanner.py
tests/fixtures/: clean_file.py  fake_secrets.py
